@@ -49,8 +49,8 @@ public class AddElementsToCollectionAction extends SaveElementInCollectionAction
 				return;
 			}
 		}
-		addMessage("elements_added_to_collection", new Integer(added), currentCollectionLabel);		
-		if (failed > 0) addError("elements_not_added_to_collection", new Integer(failed), currentCollectionLabel);
+		addMessage("elements_added_to_collection", Integer.valueOf(added), currentCollectionLabel);		
+		if (failed > 0) addError("elements_not_added_to_collection", Integer.valueOf(failed), currentCollectionLabel);
 		getView().setKeyEditable(false); // To mark as saved
 		getTab().deselectAll();
 		getCollectionElementView().refreshCollections(); // To reset collection totals 
