@@ -9,7 +9,7 @@ package org.openxava.calculators;
  */
 public class ZeroIntegerCalculator implements ICalculator {
 	
-	private final static Integer ZERO = new Integer(0);
+	private final static Integer ZERO = Integer.valueOf(0);
 	
 
 	public Object calculate() throws Exception {
