@@ -13,22 +13,22 @@ public class Invoice20020001Filter implements IFilter {
 		Object [] r = null;
 		if (o == null) {
 			r = new Object[2];
-			r[0] = new Integer(2002);
-			r[1] = new Integer(1);
+			r[0] = Integer.valueOf(2002);
+			r[1] = Integer.valueOf(1);
 		}
 		else if (o instanceof Object []) {
 			Object [] a = (Object []) o; 
 			r = new Object[a.length + 2];
-			r[0] = new Integer(2002);
-			r[1] = new Integer(1);
+			r[0] = Integer.valueOf(2002);
+			r[1] = Integer.valueOf(1);
 			for (int i = 0; i < a.length; i++) {
 				r[i+2]=a[i];
 			}			
 		}
 		else {
 			r = new Object[3];
-			r[0] = new Integer(2002);
-			r[1] = new Integer(1);
+			r[0] = Integer.valueOf(2002);
+			r[1] = Integer.valueOf(1);
 			r[2] = o;
 		}
 		
